syntax = "proto3";

package daemon;

option go_package = "service/proto";

service ContainerDaemonService {
  rpc GetContainers (GetContainersRequest) returns (GetContainersResponse);
  rpc GetContainerLogs (GetContainerLogsRequest) returns (GetContainerLogsResponse);
  rpc CreateContainer (CreateContainerRequest) returns (stream CreateContainerResponse);
}

message GetContainersRequest {}

message GetContainerLogsRequest {
  string containerID = 1;
}

message ContainerConfig {
  string layer = 1;
  repeated string cmd = 2;
  string workdir = 3;
}

message CreateContainerRequest {
  ContainerConfig config = 1;
}


message CreateContainerResponse {
  bool success = 1;
  string message = 2;
}


enum ContainerStatus {
  CONTAINER_UNKNOWN = 0;
  CONTAINER_HANGING = 1;
  CONTAINER_RUNNING = 2;
  CONTAINER_KILLED = 3;
}

message ContainerInfos {
  string id = 1;
  ContainerStatus status = 2;
}

message GetContainersResponse {
  repeated ContainerInfos containers = 1;
}


message GetContainerLogsResponse {
  repeated string log = 1;
}